apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: audiobookshelf
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
          image: ghcr.io/advplyr/audiobookshelf:2.35.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi

          volumeMounts:
            - name: audiobooks-volume
              mountPath: /audiobooks
            - name: podcasts-volume
              mountPath: /podcasts
            - name: config-volume
              mountPath: /config
            - name: metadata-volume
              mountPath: /metadata
      volumes:
        - name: audiobooks-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: podcasts-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts
        - name: config-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: metadata-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
